# cowiki-rs

./: .gitignore  Cargo.toml  Dockerfile  Makefile  PROOF.md  README.md
.github/workflows/: pages.yml
book/: book.toml
book/src/: SUMMARY.md  introduction.md  preface.md
book/src/appendix/: formal-claims.md  glossary.md
book/src/case-study/: landmarks.md  premise.md  product-ui.md  stubs.md
book/src/getting-started/: install.md  run-the-demos.md  your-own-corpus.md
book/src/glue/: cowiki-server.md  cowiki.md  wiki-backend.md
book/src/http/: read.md  ssr.md  write.md
book/src/measurements/: end-to-end.md  where-time-goes.md
book/src/ops/: deployment.md  ingestion.md  observability.md  persistence.md
book/src/overview/: architecture.md  what.md
book/src/part1/: the-typed-graph-bet.md  what-vector-search-misses.md  why-spreading-activation.md
book/src/part2/: budget-knap.md  chunk-quality.md  scored-graph.md  spread.md  temporal-graph.md
book/src/part3/: cowiki-server.md  cowiki.md  wiki-backend.md
book/src/part4/: deployment.md  enrichment.md  parallel-ingest.md
book/src/part5/: scale-envelope.md
book/src/primitives/: budget-knap.md  chunk-quality.md  scored-graph.md  spread.md  temporal-graph.md
book/theme/: overrides.css
crates/budget-knap/: Cargo.toml
crates/budget-knap/src/: lib.rs
crates/chunk-quality/: Cargo.toml
crates/chunk-quality/src/: lib.rs
crates/cl-ingest/: Cargo.toml
crates/cowiki/: Cargo.toml
crates/cowiki-server/: Cargo.toml
crates/cowiki-server/src/: main.rs  simulate.rs  ssr.rs
crates/cowiki/src/: lib.rs
crates/gauntlet/: Cargo.toml
crates/gauntlet/src/: adversarial_knapsack.rs  chaos.rs  lib.rs  numerical.rs  pathological.rs  stability.rs
crates/scored-graph/: Cargo.toml
crates/scored-graph/src/: lib.rs
crates/seed-corpus/: Cargo.toml
crates/seed-corpus/src/: lib.rs
crates/spread/: Cargo.toml
crates/spread/src/: lib.rs
crates/temporal-graph/: Cargo.toml
crates/temporal-graph/src/: lib.rs
crates/wiki-backend/: Cargo.toml
crates/wiki-backend/benches/: bench.rs
crates/wiki-backend/src/: graph.rs  lib.rs  meta.rs  parse.rs  persist.rs  scan.rs  store.rs  tfidf.rs  types.rs  write.rs
crates/wiki-backend/tests/: runtime_audit.rs  vopr.rs
demo-wiki/: .gitignore  index.md
demo-wiki/ai/: attention-mechanisms.md  knapsack-retrieval.md  spreading-activation.md  transformers.md
demo-wiki/cognitive/: chunking.md  memory-consolidation.md  priming.md  spreading-activation.md
demo-wiki/distributed/: consensus-protocols.md  eventual-consistency.md  fault-injection.md
demo-wiki/projects/: threat-model-review.md
demo-wiki/reading-notes/: designing-data-intensive-applications.md  thinking-fast-and-slow.md
demo-wiki/security/: attack-surface-mapping.md  sbom-analysis.md  supply-chain-security.md  threat-modeling.md
demo-wiki/systems/: rem-agent.md
docs/: index.html
proof/: requirements.txt
proof/cowiki/: __init__.py  activation.py  graph.py  metrics.py  rem.py  retrieval.py
proof/tests/: conftest.py  test_associative_recall.py  test_coherence.py  test_contraction.py  test_convergence.py  test_density_advantage.py  test_knapsack.py  test_rem_stability.py
tools/: enrich_scotus_bodies.py  ingest_courtlistener.py  ingest_wikitext.py
ui/: index.html  package-lock.json  package.json
ui-scotus/: index.html  package-lock.json  package.json
ui-scotus/src/: App.jsx  ExplorerView.jsx  NeighborhoodGraph.jsx  api.js  index.css
ui/src/: App.jsx  CorpusSelector.jsx  SearchTab.jsx  SimulationTab.jsx  api.js  index.css  main.jsx
