[workspace]
resolver = "2"
members = [
    "crates/scored-graph",
    "crates/spread",
    "crates/budget-knap",
    "crates/temporal-graph",
    "crates/chunk-quality",
    "crates/cowiki",
    "crates/gauntlet",
    "crates/wiki-backend",
    "crates/cowiki-server",
    "crates/seed-corpus",
    "crates/cl-ingest",
]

[workspace.dependencies]
proptest = "1"
