[package]
name = "cowiki-server"
version = "0.1.0"
edition = "2021"
description = "HTTP API server for the Co-Wiki backend"

[dependencies]
wiki-backend = { path = "../wiki-backend" }
spread = { path = "../spread" }
temporal-graph = { path = "../temporal-graph" }
axum = { version = "0.8", features = ["default"] }
futures = "0.3"
tokio-stream = "0.1"
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
urlencoding = "2"
