[package]
name = "cowiki"
version = "0.1.0"
edition = "2021"
description = "Co-Wiki retrieval pipeline: spreading activation + knapsack retrieval + REM maintenance"

[dependencies]
scored-graph = { path = "../scored-graph" }
spread = { path = "../spread" }
budget-knap = { path = "../budget-knap" }
temporal-graph = { path = "../temporal-graph" }
chunk-quality = { path = "../chunk-quality" }

[dev-dependencies]
proptest = { workspace = true }
