[package]
name = "wiki-backend"
version = "0.1.0"
edition = "2024"
description = "Wiki filesystem backend for Co-Wiki: scan, index, retrieve, maintain"

[dependencies]
scored-graph = { path = "../scored-graph" }
spread = { path = "../spread" }
budget-knap = { path = "../budget-knap" }
temporal-graph = { path = "../temporal-graph" }
chunk-quality = { path = "../chunk-quality" }
cowiki = { path = "../cowiki" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.39", features = ["bundled"] }
walkdir = "2"
regex = "1"

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"
